fixes for swagger
